overflow fix

--- a/client/src/scss/calls.scss
+++ b/client/src/scss/calls.scss
@@ -99,6 +99,7 @@ form textarea {
 
 .round-link:hover {
     background-color: $highlightDark;
+    cursor: pointer;
 }
 
 .call-time {
