--- a/client/src/scss/citizens.scss
+++ b/client/src/scss/citizens.scss
@@ -48,6 +48,7 @@
         .table-scroll {
             display: flex;
             align-items: center;
+            overflow: visible;
         }
 
         form {
